Upgraded to a secure api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,12 +72,12 @@
         <div
           class="text-center lg:text-left tracking-wider text-sm font-bold text-stone-400"
         >
-          ISP
+          ORG
         </div>
         <div
           class="text-center lg:text-left text-lg lg:text-3xl font-semibold font-rubik py-2 lg:py-4 break-words mr-4"
         >
-          {{ ISP }}
+          {{ ORG }}
         </div>
       </div>
     </div>
